main content fixed overflow

--- a/lesson4/chamber/css/base.css
+++ b/lesson4/chamber/css/base.css
@@ -154,7 +154,7 @@ nav ul.open {
     color: #000000;
     margin: 1rem auto;
     padding: 1rem;
-    min-width: 400px;
+    min-width: 360px;
 }
 
 .hero {
